--- a/index.html
+++ b/index.html
@@ -6,28 +6,31 @@
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Quintessential&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class = "container">
       <div class = "card">
         <div class = "title">
-          <h1>Hello, my name is TinTin Viet Tran</h1>
-            <p>I am a 21 year old man with a Vietnamese ethnic background and i am a programmer</p>
+          <h1>Hello, my name is TinTin 🐱‍💻</h1>
+            <p>I am a 21 year old programmer(kinda) who loves HTML🎉</p>
         </div>
     <div class = "section-1">
       <img class = "picture-1" src = "https://scontent-lhr8-2.xx.fbcdn.net/v/t1.6435-9/144922546_1581661372029989_704499708225678590_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=k3Bh7Z8tfmMAX8ysY-d&_nc_oc=AQkJo7dymAE2offnaYMb8Ee-mPdOyf4aqUfJrNakWIy8YwH772rzNjl_UUjVb6UCkkw&tn=wIjcRGFzCm6pZhmP&_nc_ht=scontent-lhr8-2.xx&oh=00_AT9765-sFiqdm5I5FBD7dQ3DM0D15mqUWOlFGaB1sm1ugQ&oe=62212BEE">
     </div>
         <div class = section-2>
-          <p>My hobbies are gaming on the PC and during my spare time i love to go to the gym to work out.
+          <p class = "para">My hobbies are gaming on the PC and during my spare time🖥 i love to go to the gym to work out🥇.
             I am currently studying at a coding book camp called "Le Wagon" for 9 weeks and this is currently the 4th week,
-            The experience so far is mind blowing! The amount of new things i am learning that i never knew before is astonishing!
+            The experience so far is mind blowing!🤯 The amount of new things i am learning that i never knew before is astonishing!
             I can't wait to discover and learn many more new things!
           </p>
         </div>
       </div>
 <div class="footer">
       <div class = "card2">
-        <h2>Social Media</h2>
+        <h2>Social Media📱</h2>
     </div>
   <div>
     <ul class = "list-inline">
